@@ -8,14 +8,17 @@ public class TryArrayList {
         ArrayList<Integer> myList = new ArrayList<>();
         myList.add(5);
         myList.add(1);
+        System.out.println(myList);
         myList.add(1, 3);
+        System.out.println(myList);
         myList.set(0, 4);
+        System.out.println(myList);
         myList.add(myList.get(1));
         System.out.println(myList);
-//        myList.remove(myList.size() - 1);
-       myList.remove(new Integer(3));
+//        System.out.println(myList.remove(myList.size() - 1));
+       myList.remove(Integer.valueOf(3));
         System.out.println(myList);
-//        myList.remove(myList.size());
+       // myList.remove(myList.size());
 
     }
 }
